<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CollectorListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collector_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="44dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/collector_item">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="39dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/list_collector_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="Coleccionistas"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="20sp" />

</FrameLayout>