...
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            android:baselineAligned="false"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/userIsGuestButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingTop="8dp"
                android:paddingRight="4dp"
...
