...
                app:srcCompat="@drawable/collector"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@drawable/collector"
                android:contentDescription="@string/collector_detail_image" />

            <TextView
                android:id="@+id/collectorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
...
